--- a/css/pc.css
+++ b/css/pc.css
@@ -1,4 +1,35 @@
 /* pc.css */
 body {
-    background-color: lightblue;
+    /* background-color: lightblue; */
+    background-color: var(--bg-color1);
+    color: var(--text-color);
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    outline: 2px solid red;;
+}
+
+header {
+    /* background: #ccc; */
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+header h1 {
+    font-size: 22px;
+}
+
+header a {
+    color: var(--text-color);
+}
+
+header .icons li {
+    display: inline-block;
+    margin-left: 1em;
 }
