--- a/css/pc.css
+++ b/css/pc.css
@@ -8,7 +8,9 @@ body {
 .container {
     max-width: 1200px;
     margin: 0 auto;
-    outline: 2px solid red;;
+    /* outline: 2px solid red; */
+    padding-left: 20px;
+    padding-left: 20px;
 }
 
 header {
@@ -33,3 +35,31 @@ header .icons li {
     display: inline-block;
     margin-left: 1em;
 }
+
+#title {
+    /* background-color: pink; */
+    height: calc(100vh - 100px);
+    background-image: url('../images/profile.jpg');
+    background-repeat: no-repeat;
+    background-position: right top;
+    background-size: contain;
+}
+
+#title h2 {
+    font-size: 70px;
+}
+
+#title p {
+    color: var(--text-color2);
+}
+
+#title {
+    display: flex;
+    align-items: center;
+}
+
+#title h2 {
+    margin-bottom: 40px;
+}
+
+#title p { margin-bottom: 60px;}
