projects 작품소개 영역

--- a/css/pc.css
+++ b/css/pc.css
@@ -103,6 +103,7 @@ header .icons li {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 30px;
 }
 
 #projects h2 {
@@ -123,8 +124,29 @@ header .icons li {
 #projects .item-list li {
     /* border: 2px solid green; */
     width: calc(50% - 10px);
+    margin-bottom: 70px;
 }
 
 #projects .item-list li img {
     width: 100%;
+    /* 이미지 비율 지정:  가로/세로 */
+    aspect-ratio: 4/3;
+}
+
+#projects .item-list li h3 {
+    font-size: 18px;
+    text-transform: uppercase;
+    margin-top: 1em;
+    margin-bottom: 0.5em;
+    color: var(--text-color);
+}
+
+#projects .item-list li .skills {
+    font-size: 14px;
+    color: var(--text-color2);
+    text-transform: uppercase;
+}
+
+#projects .item-list li .skills span {
+    margin-right: 1em ;
 }
