--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,4 +1,173 @@
 /* mobile.css */
+
 body {
-    background-color: yellow;
+    /* background-color: lightblue; */
+    background-color: var(--bg-color1);
+    color: var(--text-color);
+}
+
+.container {
+    width: 100%;
+    /* outline: 2px solid red; */
+    padding-left: 20px;
+    padding-left: 20px;
+}
+
+header, footer .container {
+    /* background: #ccc; */
+    background: var(--bg-color1);
+    width: 100%;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+header h1, footer h1 {
+    font-size: 18px;
+}
+
+header a, footer a {
+    color: var(--text-color);
+}
+
+header .icons li, footer .icons li {
+    display: inline-block;
+    margin-left: 0.5em;
+}
+
+footer {
+    background-color: var(--bg-color2);
+}
+
+.hero {
+    background-image: url('../images/profile.jpg');
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    background-size: cover;
+    width: 100%;
+    /* border: 2px solid red; */
+}
+
+#title {
+    /* background-color: pink; */
+    height: calc(100vh - 60px);
+}
+
+#title h2 {
+    font-size: 30px;
+    text-shadow: 
+        -2px -2px 2px #000,
+        2px -2px 2px #000,
+        2px 2px 2px #000,
+        -2px 2px 2px #000;
+}
+
+#title p {
+    color: var(--text-color2);
+    display: none;
+}
+
+#title {
+    display: flex;
+    align-items: flex-end;
+    padding-bottom: 5em;
+}
+
+#title h2 {
+    margin-bottom: 40px;
+}
+
+#title p { margin-bottom: 60px;}
+
+#skills {
+    margin-top: 100px;
+    padding: 80px 20px;
+    border-top: 1px solid rgba(255,255,255,0.3);
+}
+
+#skills h3 {
+    font-size: 34px;
+}
+
+#skills .skill-list {
+    /* display: flex; */
+    /* flex-wrap: wrap; */
+}
+
+#skills .skill-list li {
+    /* outline: 1px solid red; */
+    width: calc(100%);
+    padding-bottom: 50px; 
+    /* padding-right: 20px; */
+}
+
+#skills .skill-list li p {
+    color: var(--text-color2);
+    margin-top: 0.5em;
+}
+
+/* section이나 article에는 제목이 필수이나 디자인 적으로 생략 가능 */
+#skills h2 { display: none; }
+
+#projects .title-group {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+#projects h2 {
+    font-size: 42px;
+}
+
+#projects.container {
+    /* border: 1px solid red; */
+    padding-right: 20px;
+}
+
+#projects .item-list {
+
+}
+
+#projects .item-list li {
+    /* border: 2px solid green; */
+    width: 100%;
+    margin-bottom: 70px;
+}
+
+#projects .item-list li img {
+    width: 100%;
+    /* 이미지 비율 지정:  가로/세로 */
+    aspect-ratio: 4/3;
+}
+
+#projects .item-list li h3 {
+    font-size: 18px;
+    text-transform: uppercase;
+    margin-top: 0.5em;
+    margin-bottom: 0.3em;
+    color: var(--text-color);
+}
+
+#projects .item-list li .skills {
+    font-size: 14px;
+    color: var(--text-color2);
+    text-transform: uppercase;
+}
+
+#projects .item-list li .skills span {
+    margin-right: 1em ;
+}
+
+#footer .container {
+    background: var(--bg-color2);
+}
+
+
+/* 모바일 버튼 글자 크기 */
+.btn {
+    font-size: 16px;
 }
